--- a/app/src/main/res/layout/item_camera.xml
+++ b/app/src/main/res/layout/item_camera.xml
@@ -15,6 +15,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <ImageView
+            android:id="@+id/iv_lock"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_margin="18dp"
+            android:src="@drawable/ic_lock"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
         <TextView
 
             android:id="@+id/tv"
