--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -6,6 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".ui.Cameras.CameraFragment">
 
+
+
     <ProgressBar
         android:id="@+id/progress_bar"
         android:layout_width="wrap_content"
@@ -18,6 +20,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_cameras"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:listitem="@layout/item_camera" />
