--- a/app/src/main/res/layout/fragment_doors.xml
+++ b/app/src/main/res/layout/fragment_doors.xml
@@ -17,6 +17,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_doors"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:listitem="@layout/item_camera" />
