--- a/app/src/main/res/layout/fragment_doors.xml
+++ b/app/src/main/res/layout/fragment_doors.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.doors.DoorsFragment">
+    tools:context=".presentation.doors.DoorsFragment">
 
     <ProgressBar
         android:id="@+id/progress_bar"
